aws/Jenkins_proj-master/TwistlockDeploy/console-ACL-SG.tf
resource "aws_network_acl" "all-console" {
  vpc_id = "${aws_vpc.console.id}"

  egress {
    protocol   = "-1"
    rule_no    = 2
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }

  ingress {
    protocol   = "-1"
    rule_no    = 1
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }

  tags {
    Name = "console open acl"
  }
}

#Security Groups
resource "aws_security_group" "consoleWideOpen" {
  name        = "consoleWideOpen"
  description = "Wide open security group"
  vpc_id      = "${aws_vpc.console.id}"

  ingress {
    from_port   = "22"
    to_port     = "22"
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = "8080"
    to_port = "8090"
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = "0"
    to_port     = "0"
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
